# microservice-starter

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py  routes.py
app/api/v1/: items.py  users.py
app/core/: config.py  logging.py  middleware.py  telemetry.py
app/db/: base.py  session.py
app/models/: __init__.py  item.py  user.py
app/schemas/: item.py  user.py
app/services/: cache.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  MIGRATIONS.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  migration-job.yaml  secrets.example.yaml  service.yaml
load-tests/: locustfile.py
scripts/: init-db.sh  seed-data.py
tests/: conftest.py  package.json  playwright.config.ts  test_items.py  test_users.py
tests/specs/: api.spec.ts
